src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTTextureInteger_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTTextureInteger_StringErrorContext.class */
public final class EXTTextureInteger_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glClearColorIiEXT(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glClearColorIuiEXT(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("nglTexParameterIivEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glTexParameterIivEXT(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glTexParameterIiEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("nglTexParameterIuivEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glTexParameterIuivEXT(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glTexParameterIuiEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("nglGetTexParameterIivEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glGetTexParameterIivEXT(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glGetTexParameterIiEXT(II)I", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("nglGetTexParameterIuivEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glGetTexParameterIuivEXT(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glGetTexParameterIuiEXT(II)I", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glTexParameterIivEXT(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glTexParameterIuivEXT(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glGetTexParameterIivEXT(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        methods.put("glGetTexParameterIuivEXT(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureIntegerErrorContext");
        return methods;
    }
}
